--- a/package.json
+++ b/package.json
@@ -1,26 +1,27 @@
 {
   "name": "websockets-playlist",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "description": "A chat app using WebSockets",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "nodemon index.js"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/iamshaunjp/websockets-playlist.git"
+    "url": "https://github.com/ULL-ESIT-DSI-1819/websockets-playlist.git"
   },
   "author": "The Net Ninja",
+  "contributors": ["Casiano Rodriguez-Leon"],
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/iamshaunjp/websockets-playlist/issues"
+    "url": "https://github.com/ULL-ESIT-DSI-1819/websockets-playlist/issues"
   },
-  "homepage": "https://github.com/iamshaunjp/websockets-playlist#readme",
+  "homepage": "https://github.com/ULL-ESIT-DSI-1819/websockets-playlist/blob/master/README.md",
   "dependencies": {
-    "express": "^4.15.2",
-    "socket.io": "^1.7.3"
+    "express": "^4.16.4",
+    "socket.io": "^2.2.0"
   },
   "devDependencies": {
-    "nodemon": "^1.11.0"
+    "nodemon": "^1.18.10"
   }
 }
